<resources>
    <string name="app_name">Food App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_for_everyone">Food for Everyone</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="dosamarvis_gmail_com">dosamarvis@gmail.com</string>
    <string name="star">* * * * * * * *</string>
    <string name="forgot_passcode">Forgot passcode?</string>
    <string name="login">Login</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="tag_menu">menu</string>
    <string name="tag_content">content</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="offer_and_promo">offer and promo</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="security">Security</string>
    <string name="delicious">Delicious\nfood for you</string>
    <string name="search">Search</string>
    <string name="spicy">Spicy chieckns</string>
    <string name="sign_out">Sign-out</string>
</resources>