<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_orange"
    tools:context=".ui.main.HomeIncludeFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="15dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="20dp"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_marginStart="35dp"
            android:background="@color/default_gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/orderBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_order"
            android:drawablePadding="15dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="20dp"
            android:text="@string/orders"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_marginStart="35dp"
            android:background="@color/default_gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/offerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_offer"
            android:drawablePadding="15dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="20dp"
            android:text="@string/offer_and_promo"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_marginStart="35dp"
            android:background="@color/default_gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/privacyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_privacy"
            android:drawablePadding="15dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="20dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_marginStart="35dp"
            android:background="@color/default_gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/securityBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_secure"
            android:drawablePadding="15dp"
            android:fontFamily="@font/allerta"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="20dp"
            android:text="@string/security"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_right"
        android:drawablePadding="15dp"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:includeFontPadding="false"
        android:padding="20dp"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>